--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -2,69 +2,91 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/body"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4F070707"
-    android:backgroundTint="#10120F"
     android:backgroundTintMode="screen"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:padding="10sp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp">
 
-  <Button
-      android:id="@+id/button"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="48dp"
-      android:backgroundTint="#66E137"
-      android:backgroundTintMode="src_in"
-      android:hapticFeedbackEnabled="true"
-      android:text="RollDice"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.498"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/imageView"
-      app:layout_constraintVertical_bias="0.0" />
+    <Button
+        android:id="@+id/changeModeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin"
+        android:layout_marginTop="@dimen/margin"
+        android:layout_marginEnd="@dimen/margin"
+        android:backgroundTint="@color/black"
+        android:orientation="horizontal"
+        android:text="@string/btn1name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0"
+        android:textColor="@color/white"
+        />
 
-  <ImageView
-      android:id="@+id/imageView"
-      android:layout_width="100dp"
-      android:layout_height="100dp"
-      android:layout_marginTop="320dp"
-      android:src="@drawable/dice_1"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.498"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="320dp"
+        android:contentDescription="@string/Dice"
+        android:src="@drawable/dice_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-  <TextView
-      android:id="@+id/textView"
-      android:layout_width="0dp"
-      android:layout_height="30dp"
-      android:layout_marginTop="4dp"
-      android:background="#1C3AD1"
-      android:backgroundTint="#0440BA"
-      android:freezesText="false"
-      android:text="Dice Roll"
-      android:textAlignment="center"
-      android:textAllCaps="true"
-      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-      android:textColor="#FFFFFF"
-      android:textColorHighlight="#DA1E1E"
-      android:textColorHint="#F61414"
-      android:textColorLink="#2FFF18"
-      android:textDirection="firstStrongRtl"
-      android:textEditPasteWindowLayout="?android:attr/textEditPasteWindowLayout"
-      android:textIsSelectable="false"
-      android:textSize="20sp"
-      android:textStyle="italic"
-      app:layout_constraintBottom_toTopOf="@+id/imageView"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.213" />
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="@color/yellow"
+        android:backgroundTintMode="src_in"
+        android:hapticFeedbackEnabled="true"
+        android:text="@string/btn2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0"
+        style="@style/style_button"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="4dp"
+        android:accessibilityLiveRegion="assertive"
+        android:accessibilityTraversalAfter="@id/button"
+        android:accessibilityTraversalBefore="@id/button"
+        android:background="#1C3AD1"
+        android:backgroundTint="#0440BA"
+        android:freezesText="false"
+        android:text="@string/header"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#DA1E1E"
+        android:textColorHint="#F61414"
+        android:textColorLink="#2FFF18"
+        android:textDirection="firstStrongRtl"
+        android:textEditPasteWindowLayout="?android:attr/textEditPasteWindowLayout"
+        android:textIsSelectable="false"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.066" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
